Bug 131265 - 'update' icon in 3D Effects dialog has got reverse meaning
Summary: 'update' icon in 3D Effects dialog has got reverse meaning
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.0.0
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2020-03-10 21:30 UTC by Regina Henschel
Modified: 2020-03-11 14:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
For testing 'update' icon in 3D-Effects dialog (14.65 KB, application/vnd.oasis.opendocument.graphics)
2020-03-10 21:30 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-03-10 21:30:05 UTC
Created attachment 158575 [details]
For testing 'update' icon in 3D-Effects dialog

Start current daily build of LibreOffice, e.g. from 2020-03-08.
Customize a toolbar to include the '3D Effects' icon.
Open attached document.
Start the dialog with tab 'Geometry'.
Notice, that the 'update' icon, second from right in upper line, is not pressed.
Click a 3D-object. Notice, that the dialog is filled with the properties of the selected object. Click another 3D-object, the properties change.
Click on the 'Update' icon to activate it. Again click on the 3D-objects. Notice, that the values in the dialog do not change.
Close document without any changes.

Start an older build, e.g. from 2020-01-15. Do the same as above. Notice, that now with pressed (activated) icon the dialog values are updated and with not pressed (deactivated) icon the dialog values are not updated.

Because the meaning of the 'update' icon has always (starting with StarOffice) been, that pressed, active icon means, that the dialog values will get the values from the selected 3D-shape, I consider the now reversed behavior as bug.

It is OK in Version: 6.5.0.0.alpha0+ (x64)
Build ID: 147af9e2cf7f937ed83ab00574b6a418a2cb629e
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

It is broken in Version: 7.0.0.0.alpha0+ (x64)
Build ID: f61fa885ed929e7d4aea4d84b2ddadea4825eb18
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: CL
Comment 1 Julien Nabet 2020-03-10 22:29:00 UTC
On pc Debian x86-64 with master sources updated today, I got a slightly different behaviour.
When opening dialog, update icon is not pressed => ok
When clicking on a 3D-object, geometry properties changed =>ok
but update icon is pressed! (I mean I didn't press it but it's automatically enabled).
so then when I click other 3D-objects, geometry properties change

Then, if I press "update" to disable it, when clicking 3D-objects, geometry properties don't change.

In brief only the initial state is wrong.
=> Let's put this one to NEW since there's indeed something wrong
Comment 2 Julien Nabet 2020-03-10 22:55:23 UTC
My previous comment was due to the fact I used gtk3 rendering which seems buggy here.
With gen rendering, I reproduce exactly your pb.
Comment 3 Julien Nabet 2020-03-10 23:03:01 UTC
Let's give a try with:
https://gerrit.libreoffice.org/c/core/+/90313
Comment 4 Commit Notification 2020-03-11 10:27:21 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5f70927f948c4c86887236a0451545ce0ca20ec2

tdf#131265: Fix 'update' icon in 3D Effects dialog meaning

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.