tdf#131265: Fix 'update' icon in 3D Effects dialog meaning

The effect was reversed

Change-Id: I611d12eec88ba213d952df541cec89c0664471cd